# fastapi-on-azure-functions

./: function_app.py  setup.cfg  setup.py
src/fastapi_app/: main.py
src/fastapi_app/api/: api.py
src/fastapi_app/api/v1/: v1.py
src/fastapi_app/api/v1/endpoints/: users.py
