[metadata]
name = azure-app
version = 0.0.0.dev0
description = Azure Function python example

[options]
# Needed to include all non-python files in the archive
# This is in addition of MANIFEST.in file
include_package_data = True
packages = find:
package_dir =
    fastapi_app = src/fastapi_app
install_requires = file: requirements.txt

[options.packages.find]
where = src

## Plugin used for package release.
## More informations : https://zestreleaser.readthedocs.io/en/latest/
[zest.releaser]
create-wheel = yes
tag-format = {version}
extra-message = [zest.releaser] 🤖 [ci skip]
date-format = %%Y-%%m-%%d %%H:%%M:%%S

[mypy]
# Just to ensure CI do not fail
ignore_errors = True
